WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199853
[WHLSL] Return the zero-value enum in the enum-from-integer constructor when the integer is not a valid enum value
https://bugs.webkit.org/show_bug.cgi?id=199853
Summary
[WHLSL] Return the zero-value enum in the enum-from-integer constructor when ...
Saam Barati
Reported
2019-07-17 04:10:39 PDT
...
Attachments
patch
(8.51 KB, patch)
2019-07-20 06:33 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2019-07-20 06:33:23 PDT
Created
attachment 374550
[details]
patch
EWS Watchlist
Comment 2
2019-07-20 06:35:03 PDT
Attachment 374550
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/webgpu/WHLSL/Metal/WHLSLNativeFunctionWriter.cpp:148: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Myles C. Maxfield
Comment 3
2019-07-20 20:27:42 PDT
R=me
WebKit Commit Bot
Comment 4
2019-07-21 11:31:59 PDT
Comment on
attachment 374550
[details]
patch Clearing flags on attachment: 374550 Committed
r247675
: <
https://trac.webkit.org/changeset/247675
>
WebKit Commit Bot
Comment 5
2019-07-21 11:32:00 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-07-21 11:32:16 PDT
<
rdar://problem/53370712
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug