[WHLSL] Return the zero-value enum in the enum-from-integer constructor when the integer is not a valid enum value https://bugs.webkit.org/show_bug.cgi?id=199853

Reviewed by Dean Jackson.

Source/WebCore:

Test: webgpu/whlsl/enum-integer-constructor.html

* Modules/webgpu/WHLSL/Metal/WHLSLNativeFunctionWriter.cpp:
(WebCore::WHLSL::Metal::writeNativeFunction):

LayoutTests:

* webgpu/whlsl/enum-integer-constructor-expected.txt: Added.
* webgpu/whlsl/enum-integer-constructor.html: Added.


Canonical link: https://commits.webkit.org/213837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247675 268f45cc-cd09-0410-ab3c-d52691b4dbfc